Fixes z-index for links on mobile.

--- a/src/app/components/portfolio/pyramidsofgiza/pyramidsofgiza.component.scss
+++ b/src/app/components/portfolio/pyramidsofgiza/pyramidsofgiza.component.scss
@@ -11,7 +11,7 @@
 
 .disclaimer {
   position: relative;
-  z-index: -1;
+  z-index: 1;
   margin: 0;
   opacity: 0;
   animation: bounce-in 1s forwards;
