--- a/src/app/components/portfolio/wickedawesomepizza/wickedawesomepizza.component.scss
+++ b/src/app/components/portfolio/wickedawesomepizza/wickedawesomepizza.component.scss
@@ -10,7 +10,7 @@
 
 .button {
   position: relative;
-  z-index: -1;
+  z-index: 1;
   margin: 0;
   opacity: 0;
   animation: bounce-in 1s forwards;
